# edpc-rs

./: Cargo.toml  README.md  contest.acc.json
a/: main.rs
b/: main.rs
c/: main.rs
d/: main.rs
e/: main.rs
o/: main.rs
